--- a/checkvite/templates/index.html
+++ b/checkvite/templates/index.html
@@ -8,14 +8,86 @@
   </head>
   <body>
     <div class="container">
+      <nav class="nav">
+  <div class="nav-left">
+    <a class="brand" href="#"><img src="/static/moz.svg" style="height: 30px"/>PDF.js alt text</a>
+
+    <div class="tabs">
+      <a class="button outline tablinks active" onclick="openTab(event, 'random')">Random</a>
+      <a class="button outline tablinks" onclick="openTab(event, 'adversarial')">Adversarial</a>
+      <a class="button outline tablinks" onclick="openTab(event, 'stats')">Stats</a>
+
+    </div>
+  </div>
+</nav>
+ <br/>
+
+  {% if message %}
+  <div class="row">
+  <div class="col-12">
+  <h4>{{message}}</h4>
+  </div>
+  </div>
+  {% endif %}
+
+  <div id="random" class="tabcontent">
+
+  {% for row in range(1, 4) %}  <!-- Creates three rows -->
+    <div class="row">
+      {% for col in range(1, 4) %}  <!-- Creates three columns per row -->
+        <div id="image{{ (row - 1) * 3 + col }}" class="col-4">
+          <form action="/train" method="POST" enctype="application/x-www-form-urlencoded">
+          <p>Train with the caption below, or mark it as OK
+          <input type="text" name="caption" id="caption{{ (row - 1) * 3 + col }}" required></input>
+          <input id="image_id{{ (row - 1) * 3 + col }}" type="hidden" name="image_id" value=""/>
+          <input id="dataset{{ (row - 1) * 3 + col }}" type="hidden" name="dataset" value=""/>
+          </p>
+          <footer class="is-right">
+            <button name="train" type="submit" id="fail_{{ (row - 1) * 3 + col }}" class="button error">Train</a>
+            <button name="discard" type="submit" id="success_{{ (row - 1) * 3 + col }}" class="button success">Discard</a>
+          </footer>
+          </form>
+        </div>
+      {% endfor %}
+    </div>
+  {% endfor %}
+
+</div>
+
+<div id="adversarial" class="tabcontent" style="display: none">
+
+  {% for row in range(1, 4) %}  <!-- Creates three rows -->
+    <div class="row">
+      {% for col in range(1, 4) %}  <!-- Creates three columns per row -->
+        <div id="a_image{{ (row - 1) * 3 + col }}" class="col-4">
+          <form action="/train" method="POST" enctype="application/x-www-form-urlencoded">
+          <p>Train with the caption below, or mark it as OK
+          <input type="text" name="caption" id="a_caption{{ (row - 1) * 3 + col }}" required></input>
+          <input id="a_image_id{{ (row - 1) * 3 + col }}" type="hidden" name="image_id" value=""/>
+          <input id="a_dataset{{ (row - 1) * 3 + col }}" type="hidden" name="dataset" value=""/>
+          </p>
+          <footer class="is-right">
+            <button name="train" type="submit" id="a_fail_{{ (row - 1) * 3 + col }}" class="button error">Train</a>
+            <button name="discard" type="submit" id="a_success_{{ (row - 1) * 3 + col }}" class="button success">Discard</a>
+          </footer>
+          </form>
+        </div>
+      {% endfor %}
+    </div>
+  {% endfor %}
+
+
+</div>
+
+  <div id="stats" class="tabcontent" style="display: none">
       <div class="card" style="margin-top: 15px; margin-bottom: 15px">
         <header>
-          <img src="/static/moz.svg" style="height: 30px"/>&nbsp;PDF.js Model tweaking. Model v0.1
         </header>
 
         Training Stats
         <ul>
           <li>Number of images: {{ total_images }}</li>
+          <li>Number of images queued for training: {{ to_train_images }}</li>
           <li>Number of images re-trained: {{ retrained_images }}</li>
           <li>Number of images marked as good: {{ good_images }}</li>
           <li>Number of custom images added: {{ custom_images }}</li>
@@ -57,34 +129,8 @@
           </button>
         </footer>
       </div>
+</div>
 
-  {% if message %}
-  <div class="row">
-  <div class="col-12">
-  <h4>{{message}}</h4>
   </div>
-  </div>
-  {% endif %}
-
-  {% for row in range(1, 4) %}  <!-- Creates three rows -->
-    <div class="row">
-      {% for col in range(1, 4) %}  <!-- Creates three columns per row -->
-        <div id="image{{ (row - 1) * 3 + col }}" class="col-4">
-          <form action="/train" method="POST" enctype="application/x-www-form-urlencoded">
-          <p>Train with the caption below, or mark it as OK
-          <input type="text" name="caption" id="caption{{ (row - 1) * 3 + col }}" required></input>
-          <input id="image_id{{ (row - 1) * 3 + col }}" type="hidden" name="image_id" value=""/>
-          <input id="dataset{{ (row - 1) * 3 + col }}" type="hidden" name="dataset" value=""/>
-          </p>
-          <footer class="is-right">
-            <button name="train" type="submit" id="fail_{{ (row - 1) * 3 + col }}" class="button error">Train</a>
-            <button name="discard" type="submit" id="success_{{ (row - 1) * 3 + col }}" class="button success">Discard</a>
-          </footer>
-          </form>
-        </div>
-      {% endfor %}
-    </div>
-  {% endfor %}
-
   </body>
 </html>
