--- a/checkvite/templates/index.html
+++ b/checkvite/templates/index.html
@@ -13,8 +13,9 @@
     <a class="brand" href="#"><img src="/static/moz.svg" style="height: 30px"/>PDF.js alt text</a>
 
     <div class="tabs">
-      <a class="button outline tablinks active" onclick="openTab(event, 'random')">Random</a>
-      <a class="button outline tablinks" onclick="openTab(event, 'adversarial')">Adversarial</a>
+      <a class="button outline tablinks active" onclick="openTab(event, 'to_verify')">To Verify</a>
+      <a class="button outline tablinks" onclick="openTab(event, 'verified')">Verified</a>
+      <a class="button outline tablinks" onclick="openTab(event, 'to_train')">To train</a>
       <a class="button outline tablinks" onclick="openTab(event, 'stats')">Stats</a>
 
     </div>
@@ -30,7 +31,7 @@
   </div>
   {% endif %}
 
-  <div id="random" class="tabcontent">
+  <div id="to_verify" class="tabcontent">
 
   {% for row in range(1, 4) %}  <!-- Creates three rows -->
     <div class="row">
@@ -40,7 +41,6 @@
           <p>Train with the caption below, or mark it as OK
           <input type="text" name="caption" id="caption{{ (row - 1) * 3 + col }}" required></input>
           <input id="image_id{{ (row - 1) * 3 + col }}" type="hidden" name="image_id" value=""/>
-          <input id="dataset{{ (row - 1) * 3 + col }}" type="hidden" name="dataset" value=""/>
           </p>
           <footer class="is-right">
             <button name="train" type="submit" id="fail_{{ (row - 1) * 3 + col }}" class="button error">Train</a>
@@ -54,8 +54,7 @@
 
 </div>
 
-<div id="adversarial" class="tabcontent" style="display: none">
-
+<div id="verified" class="tabcontent" style="display: none">
   {% for row in range(1, 4) %}  <!-- Creates three rows -->
     <div class="row">
       {% for col in range(1, 4) %}  <!-- Creates three columns per row -->
@@ -64,19 +63,37 @@
           <p>Train with the caption below, or mark it as OK
           <input type="text" name="caption" id="a_caption{{ (row - 1) * 3 + col }}" required></input>
           <input id="a_image_id{{ (row - 1) * 3 + col }}" type="hidden" name="image_id" value=""/>
-          <input id="a_dataset{{ (row - 1) * 3 + col }}" type="hidden" name="dataset" value=""/>
           </p>
           <footer class="is-right">
             <button name="train" type="submit" id="a_fail_{{ (row - 1) * 3 + col }}" class="button error">Train</a>
-            <button name="discard" type="submit" id="a_success_{{ (row - 1) * 3 + col }}" class="button success">Discard</a>
+            <button name="discard" type="submit" id="a_success_{{ (row - 1) * 3 + col }}" class="button success">Valid</a>
           </footer>
           </form>
         </div>
       {% endfor %}
     </div>
   {% endfor %}
+</div>
 
+<div id="to_train" class="tabcontent" style="display: none">
+  {% for row in range(1, 4) %}  <!-- Creates three rows -->
+    <div class="row">
+      {% for col in range(1, 4) %}  <!-- Creates three columns per row -->
+        <div id="t_image{{ (row - 1) * 3 + col }}" class="col-4
+          <form action="/train" method="POST" enctype="application/x-www-form-urlencoded">          <p>Train with the caption below, or mark it as OK
+          <input type="text" name="caption" id="t_caption{{ (row - 1) * 3 + col }}" required></input>
+          <input id="t_image_id{{ (row - 1) * 3 + col }}" type="hidden" name="image_id" value=""/>
+          </p>
 
+          <footer class="is-right">
+            <button name="train" type="submit" id="t_fail_{{ (row - 1) * 3 + col }}" class="button error">Train</a>
+            <button name="discard" type="submit" id="t_success_{{ (row - 1) * 3 + col }}" class="button success">Valid</a>
+          </footer>
+          </form>
+        </div>
+      {% endfor %}
+    </div>
+  {% endfor %}
 </div>
 
   <div id="stats" class="tabcontent" style="display: none">
