--- a/checkvite/templates/index.html
+++ b/checkvite/templates/index.html
@@ -1,3 +1,6 @@
+{% set items_per_batch = 9 %}
+{% set start = 1 + (batch - 1) * items_per_batch %}
+{% set end = start + 3 %}
 <!doctype html>
 <html>
   <head>
@@ -13,15 +16,18 @@
     <a class="brand" href="#"><img src="/static/moz.svg" style="height: 30px"/>PDF.js alt text</a>
 
     <div class="tabs">
-      <a id="tab_to_verify" class="button outline tablinks active">To Verify</a>
-      <a id="tab_verified" class="button outline tablinks">Verified</a>
-      <a id="tab_to_train" class="button outline tablinks">To train</a>
-      <a id="tab_stats" class="button outline tablinks">Stats</a>
-    </div>
+      <a id="tab_to_verify" class="button outline tablinks {{ 'active' if tab == 'to_verify' else '' }}"">To Verify</a>
+      <a id="tab_verified" class="button outline tablinks {{ 'active' if tab == 'verified' else '' }}"">Verified</a>
+      <a id="tab_to_train" class="button outline tablinks {{ 'active' if tab == 'to_train' else '' }}"">To train</a>
+      <a id="tab_stats" class="button outline tablinks {{ 'active' if tab == 'stats' else '' }}"">Stats</a>
+    <a class="button outline tablinks" id="backward">⬅️</a>
+    <a class="button outline tablinks" id="forward">➡️</a>
+  </div>
+
+
   </div>
 </nav>
  <br/>
-
   {% if message %}
   <div class="row">
   <div class="col-12">
@@ -30,43 +36,25 @@
   </div>
   {% endif %}
 
-  <div id="to_verify" class="tabcontent">
 
-  {% for row in range(1, 4) %}  <!-- Creates three rows -->
+{% if tab != 'stats' %}
+
+  <div id="images" class="tabcontent">
+
+  {% for i in range(start, end) %}
     <div class="row">
-      {% for col in range(1, 4) %}  <!-- Creates three columns per row -->
-        <div id="image{{ (row - 1) * 3 + col }}" class="col-4">
+      {% for x in range(3) %}  <!-- Assuming each row should have 3 columns -->
+        {% set j = (i - start) * 3 + start + x %}
+        <div id="image{{ j }}" class="col-4">
           <form action="/train" method="POST" enctype="application/x-www-form-urlencoded">
-          <p>Train with the caption below, or mark it as OK
-          <input type="text" name="caption" id="caption{{ (row - 1) * 3 + col }}"></input>
-          <input id="image_id{{ (row - 1) * 3 + col }}" type="hidden" name="image_id" value=""/>
-          </p>
-          <footer class="is-right">
-            <button name="train" type="submit" id="fail_{{ (row - 1) * 3 + col }}" class="button error">Train</a>
-            <button name="discard" type="submit" id="success_{{ (row - 1) * 3 + col }}" class="button success">Discard</a>
-          </footer>
-          </form>
-        </div>
-      {% endfor %}
-    </div>
-  {% endfor %}
-
-</div>
-
-<div id="verified" class="tabcontent" style="display: none">
-  {% for row in range(1, 4) %}  <!-- Creates three rows -->
-    <div class="row">
-      {% for col in range(1, 4) %}  <!-- Creates three columns per row -->
-        <div id="a_image{{ (row - 1) * 3 + col }}" class="col-4">
-          <form action="/train" method="POST" enctype="application/x-www-form-urlencoded">
-          <p>Train with the caption below, or mark it as OK
-          <input type="text" name="caption" id="a_caption{{ (row - 1) * 3 + col }}"></input>
-          <input id="a_image_id{{ (row - 1) * 3 + col }}" type="hidden" name="image_id" value=""/>
-          </p>
-          <footer class="is-right">
-            <button name="train" type="submit" id="a_fail_{{ (row - 1) * 3 + col }}" class="button error">Train</a>
-            <button name="discard" type="submit" id="a_success_{{ (row - 1) * 3 + col }}" class="button success">Valid</a>
-          </footer>
+            <p>Train with the caption below, or mark it as OK
+              <input type="text" name="caption" id="caption{{ j }}"></input>
+              <input id="image_id{{ j }}" type="hidden" name="image_id" value=""></input>
+            </p>
+            <footer class="is-right">
+              <button name="train" type="submit" id="fail_{{ j }}" class="button error">Train</button>
+              <button name="discard" type="submit" id="success_{{ j }}" class="button success">Discard</button>
+            </footer>
           </form>
         </div>
       {% endfor %}
@@ -74,28 +62,14 @@
   {% endfor %}
 </div>
 
-<div id="to_train" class="tabcontent" style="display: none">
-  {% for row in range(1, 4) %}  <!-- Creates three rows -->
-    <div class="row">
-      {% for col in range(1, 4) %}  <!-- Creates three columns per row -->
-        <div id="t_image{{ (row - 1) * 3 + col }}" class="col-4
-          <form action="/train" method="POST" enctype="application/x-www-form-urlencoded">          <p>Train with the caption below, or mark it as OK
-          <input type="text" name="caption" id="t_caption{{ (row - 1) * 3 + col }}"></input>
-          <input id="t_image_id{{ (row - 1) * 3 + col }}" type="hidden" name="image_id" value=""/>
-          </p>
+{% endif %}
 
-          <footer class="is-right">
-            <button name="train" type="submit" id="t_fail_{{ (row - 1) * 3 + col }}" class="button error">Train</a>
-            <button name="discard" type="submit" id="t_success_{{ (row - 1) * 3 + col }}" class="button success">Valid</a>
-          </footer>
-          </form>
-        </div>
-      {% endfor %}
-    </div>
-  {% endfor %}
-</div>
+{% if tab == 'stats' %}
 
-  <div id="stats" class="tabcontent" style="display: none">
+
+  <div id="stats"
+       class="tabcontent">
+
       <div class="card" style="margin-top: 15px; margin-bottom: 15px">
         <header>
 
@@ -139,7 +113,11 @@
           </button>
         </footer>
       </div>
+
+
 </div>
+{% endif %}
+
 
   </div>
   </body>
