--- a/checkvite/templates/index.html
+++ b/checkvite/templates/index.html
@@ -37,7 +37,12 @@
               class="button outline tablinks {{ 'active' if tab == 'stats' else '' }}"
               >Stats</a
             >
-            {% if tab != 'stats' %}
+            <a
+              id="tab_help"
+              class="button outline tablinks {{ 'active' if tab == 'help' else '' }}"
+              >Guidelines</a
+            >
+            {% if tab not in ('help', 'stats') %}
             <a class="button outline tablinks" id="backward">⬅️</a>
             <a class="button outline tablinks" id="forward">➡️</a>
             {% endif %}
@@ -52,7 +57,9 @@
           <h4>{{ message }}</h4>
         </div>
       </div>
-      {% endif %} {% if tab != 'stats' %}
+      {% endif %}
+
+      {% if tab not in ('help', 'stats') %}
       <div id="images" class="tabcontent">
         {% for i in range(start, end) %}
         <div class="row">
@@ -145,7 +152,72 @@
         </div>
         {% endfor %}
       </div>
-      {% endif %} {% if tab == 'stats' %}
+      {% endif %}
+
+      {% if tab == 'help' %}
+      <div id="help" class="tabcontent">
+        <div class="card" style="margin-top: 15px; margin-bottom: 15px">
+          <header>
+            <h2>Guidelines to curate the dataset</h2>
+          </header>
+
+    <p>Make sure you are on the <a href="/?tab=to_verify&batch=1">To Verify</a> tab of the site.</p>
+    <p>For each image, you will be evaluating the "Firefox" alt text as compared to alt text provided by a human (“Human”) and text provided by another model (“Baseline”).
+    If the “Firefox” alt text fits our defined criteria for "Acceptable" (see below), click "Accept" without filling out any other fields.
+    Click on the wand to generate the text.
+    If it fits the criteria below for “Unacceptable,” write an improved alt text description, select all applicable reasons for rejection, and then click Reject & Retrain.</p>
+
+    <h3>Acceptable vs. Unacceptable Alt Text</h3>
+    <p>We will be evaluating this model from the perspective of a content creator,</p>
+    <ul>
+     <li><strong>Acceptable</strong> I would use this description with no or minimal editing (adding or changing just a few words).</li>
+
+      <li><strong>Unacceptable</strong> I would rewrite this description significantly or entirely.</li>
+    </ul>
+
+    <h3>Reasons for Rejection</h3>
+    <p>If the description is unacceptable, please select each applicable reason, as defined below:</p>
+    <ul>
+        <li><strong>Inaccurate:</strong>
+            <ul>
+                <li>The content misidentifies people or objects from the image or contains false information.</li>
+                <li>The model inaccurately counts the number of people or objects. Instead of specific numbers, it should use general terms like “some” or “group”.</li>
+            </ul>
+        </li>
+        <li><strong>Assumptive:</strong> The model shouldn’t assume identity or culture. This means it should never mention the following, even at the expense of potential relevancy, because only the content creator can properly assess identity characteristics:
+            <ul>
+                <li>Gender: Should use “person” or “kid”/“child” instead</li>
+                <li>Race or nationality</li>
+                <li>Health or disability status</li>
+                <li>Historical, religious, or cultural context</li>
+            </ul>
+        </li>
+        <li><strong>Difficult to read:</strong>
+            <ul>
+                <li>Contains grammatical errors</li>
+                <li>Meaning is unclear</li>
+                <li>Uses overly complex words and sentence constructions</li>
+            </ul>
+        </li>
+        <li><strong>Not concise:</strong> The description is not a concise description of the image’s purpose
+            <ul>
+                <li>It is too long, wordy, or repetitive</li>
+                <li>It includes superfluous words like “image,” “icon”, or “picture”</li>
+            </ul>
+        </li>
+        <li><strong>Lacks details:</strong> Does not include the relevant, appropriate details that help readers gain a basic understanding of what the image depicts.</li>
+        <li><strong>Wrong tone:</strong> The tone of the writing is not neutral and conversational
+            <ul>
+                <li>Inflects strong emotions</li>
+                <li>Sentence structures sound unnatural or overly formal when read aloud</li>
+            </ul>
+        </li>
+    </ul>
+          </div>
+        </div>
+      {% endif %}
+
+      {% if tab == 'stats' %}
       <div id="stats" class="tabcontent">
         <div class="card" style="margin-top: 15px; margin-bottom: 15px">
           <header>
