--- a/checkvite/static/style.css
+++ b/checkvite/static/style.css
@@ -33,6 +33,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: rgb(255 255 255 / 10%);
 }
 
 .loader-small {
