added prod flag

--- a/checkvite/templates/index.html
+++ b/checkvite/templates/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="https://unpkg.com/chota@latest" />
   </head>
   <body>
+    <script>
+      window.PRODUCTION = {{ production }};
+    </script>
+
     <div class="container">
       <nav class="nav">
         <div class="nav-left">
