--- a/checkvite/static/style.css
+++ b/checkvite/static/style.css
@@ -184,3 +184,35 @@ header {
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
 }
+
+.image {
+  cursor: zoom-in;
+}
+
+.image:hover::after {
+  content: url("path/to/zoom-icon.png"); /* Replace with the path to your zoom icon */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+}
+
+.zoomed-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.zoomed-img {
+  max-width: 95%;
+  max-height: 95%;
+  transform: scale(1.5); /* Make the image zoom bigger */
+}
